--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "firebase": "8.10.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-avatar-editor": "^11.0.7",
     "react-dom": "^18.2.0",
+    "react-error-overlay": "6.0.9",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-error-overlay": "6.0.9",
     "rsuite": "^4.10.2"
   },
   "scripts": {
