--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "rsuite": "^4.10.2"
+    "rsuite": "^4.10.2",
+    "timeago-react": "^3.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
