--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rsuite": "^4.10.2",
-    "timeago-react": "^3.0.5"
+    "timeago-react": "^3.0.5",
+    "use-context-selector": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
