--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-avatar-editor": "^11.0.7",
     "react-dom": "^18.2.0",
     "react-error-overlay": "6.0.9",
+    "react-mic": "^12.4.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
